# ouster_lidar

./: os1_setup.sh
ouster_client/: CMakeLists.txt
ouster_nodelet/: CMakeLists.txt  os1.launch  os1_nodlet.launch  os2.launch  os2_nodlet.launch  package.xml  plugin_description.xml
ouster_nodelet/include/ouster_nodelet/: OS1CloudNodelet.h  os1_assembler_nodelet.h  os1_cloud_nodelet.h
ouster_nodelet/src/: OS1CloudNodelet.cpp  assembler_nodelet.cpp  os1_assembler_node.cpp  os1_assembler_nodelet.cpp  os1_cloud_node.cpp  os1_cloud_nodelet.cpp
ouster_ros/: CMakeLists.txt
