<?xml version="1.0"?>
<package format="2">
  <name>ouster_nodelet</name>
  <version>0.0.0</version>
  <description>Nodlets for ouster_ros interface</description>
  <maintainer email="ruetzf@ethz.ch">Fabio Ruetz</maintainer>
  <license>BSD</license>
  <author>Fabio Ruetz</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>nodelet</buildtool_depend>

  <depend>ouster_ros</depend>
  <depend>nodelet</depend>
  <export>
      <nodelet plugin="${prefix}/plugin_description.xml"/>
</export>

</package>